Removed stupid files, added stupid text to readme

--- a/README
+++ b/README
@@ -1,1 +1,16 @@
-sup mofos
+= Racing ASU =
+
+== About ==
+
+	I need some filler text so I guess this sentence will do.  
+I need some filler text so I guess this sentence will do.  
+I need some filler text so I guess this sentence will do.  
+I need some filler text so I guess this sentence will do.  
+I need some filler text so I guess this sentence will do.  
+
+== Install ==
+	I need some filler text so I guess this sentence will do.  
+I need some filler text so I guess this sentence will do.  
+I need some filler text so I guess this sentence will do.  
+I need some filler text so I guess this sentence will do.  
+I need some filler text so I guess this sentence will do.
