Fixed text in README

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-= Racing ASU =
+= Cruisin ASU =
+
 
 == About ==
 
@@ -8,7 +9,9 @@ I need some filler text so I guess this sentence will do.
 I need some filler text so I guess this sentence will do.  
 I need some filler text so I guess this sentence will do.  
 
+
 == Install ==
+
 	I need some filler text so I guess this sentence will do.  
 I need some filler text so I guess this sentence will do.  
 I need some filler text so I guess this sentence will do.  
